[gd_scene format=3 uid="uid://c15pf0xpp7nnp"]

[ext_resource type="Script" uid="uid://sk1segh381aj" path="res://victoria_pantalla.gd" id="1_xsyvq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m2cwa"]

[node name="VictoriaPantalla" type="Control" unique_id=582263652]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xsyvq")
metadata/_custom_type_script = "uid://b8si87ew017jq"

[node name="ColorRect" type="ColorRect" parent="." unique_id=697148300]
layout_mode = 0
offset_right = 1600.0
offset_bottom = 900.0
color = Color(0, 0, 0, 0.3137255)

[node name="CenterContainer" type="CenterContainer" parent="ColorRect" unique_id=318947009]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer" unique_id=266928582]
layout_mode = 2

[node name="Enhorabuena" type="Label" parent="ColorRect/CenterContainer/VBoxContainer" unique_id=1296630788]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Â¡Enhorabuena!"

[node name="HSeparator" type="HSeparator" parent="ColorRect/CenterContainer/VBoxContainer" unique_id=340434608]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VolverAJugar" type="Button" parent="ColorRect/CenterContainer/VBoxContainer" unique_id=1542875760]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Volver a Jugar
"

[node name="HSeparator3" type="HSeparator" parent="ColorRect/CenterContainer/VBoxContainer" unique_id=2070857877]
layout_mode = 2
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxFlat_m2cwa")

[node name="Salir" type="Button" parent="ColorRect/CenterContainer/VBoxContainer" unique_id=841291107]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Salir"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." unique_id=480354937]
process_mode = 2
volume_db = -18.0

[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/VolverAJugar" to="." method="_on_volver_a_jugar_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/Salir" to="." method="_on_salir_pressed"]
